[project]
name = "wrighter"
version = "0.1.2"
description = "eb scraping/browser automation framework built on Playwright"
authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "playwright>=1.33.0",
    "pydantic>=1.10.8",
    "playwright_stealth>=1.0.5",
    "stdl>=0.5.5",
    "loguru>=0.7.0",
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    "wrighter",
    "plugins",
    "wrighter plugins",
    "playwright plugins",
    "web scraping",
    "web automation",
    "browser automation plugins",
]
[project.urls]
Repository = "https://github.com/zigai/wrighter"

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pytest", "ruff"]

[tool.black]
line-length = 100
target_version = ['py310']

[tool.ruff]
line-length = 100
extend-ignore = ["E731", "E741", "N802", "N803", "N806", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"async_wrighter.py" = ["F401"]
"sync_wrighter.py" = ["F401"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
